<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginTop="12dp">

	<TextView
		android:id="@+id/name_label"
		android:text="@string/name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="12dp"/>

	<EditText
		android:id="@+id/name_field"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:textSize="14sp"
		android:singleLine="true"
		android:maxLength="25"
		android:inputType="textPersonName"
		android:layout_toRightOf="@id/name_label"/>

	<TextView
		android:id="@+id/email_label"
		android:text="@string/email"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/name_label"
		android:layout_margin="12dp"/>

	<EditText
		android:id="@+id/email_field"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:textSize="14sp"
		android:layout_below="@id/name_field"
		android:layout_toRightOf="@id/email_label"
		android:singleLine="true"
		android:maxLength="25"
		android:inputType="textEmailAddress"
		android:layout_marginTop="2dp"/>


	<TextView
		android:id="@+id/password_label"
		android:text="@string/password"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/email_label"
		android:layout_margin="12dp"/>

	<EditText
		android:id="@+id/password_field"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:textSize="14sp"
		android:layout_below="@id/email_field"
		android:layout_toRightOf="@id/password_label"
		android:singleLine="true"
		android:maxLength="25"
		android:inputType="textPassword"
		android:layout_marginTop="2dp"/>

	<Button
		android:id="@+id/signup"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAllCaps="false"
		android:text="Sign Up"
		android:layout_below="@id/password_field"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="25dp"
		android:enabled="false"/>


</RelativeLayout>
